--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^1.0.0-beta.6",
+    "firebase": "^9.7.0",
     "next": "12.1.5",
     "react": "18.1.0",
     "react-dom": "18.1.0"
